[package]
name = "counter"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
fuels = { workspace = true }
tokio = { workspace = true }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
